--- a/Diffusion Models/Readme
+++ b/Diffusion Models/Readme
@@ -1,3 +1,3 @@
-On Monday, September 30​, 2024, I had an opportunity to join an online class Generative AI with Diffusion Models​ delivered by Deep Learning Institute, NVIDIA. It was such a good chance to grasp on the introduction and basis understanding of Imagine analysis using diffusion model. All file uploaded to this folder were derived from that class material except for their data. If this violated any creativity rule, please let me know, I would remove them from my repository immediately.
-
+On Monday, September 30​, 2024, I had an opportunity to join an online class Generative AI with Diffusion Models​ delivered by Deep Learning Institute, NVIDIA. It was such a good chance to grasp on the introduction and basis understanding of Imagine analysis using diffusion model. All file uploaded to this folder were derived from that class material except for their data. If this violated any creativity rule, please let me know, I would remove them from my repository immediately. 
+Before attending this class, I had zero information of Unet or diffusion models in general. After this class, everything is still new to me. However, at least I knew I knocked on the right door.
 Thank you!
